assets/css/style.css
/* Google Fonts Import */
@import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap');

/* CSS Variables */

:root {
    --primary-font: "Parkinsans", sans-serif;
    --primary-color: #133c55;
    --secondary-color: #386fa4;
    --tertiary-color: #91e5f6;
    --quarternary-color: #59a5d8;
    --color: #84d2f6;
}

/* Global Styles */

html, 
body {
    margin: 0;
    padding: 0;
    font-family: var(--primary-font);
    background-color: var(--secondary-color);
}

h1,
#quiz-parameters-container h2,
#logo,
h4,
strong {
    color: var(--primary-color);
}

#start-screen-container h2,
#quiz-question-container h2,
#quiz-question-container h3,
#quiz-parameters-container h3,
#results-container h3  {
    font-weight: 600;
}

.card {
    max-width: 600px; 
    width: 100%;
    padding: 20px;
    border: none;
    background-color: var(--tertiary-color);
}

.section {
    display: flex;
    justify-content: center; 
    align-items: center;    
    height: 100vh;   
}

#start-screen-container button,
#parameter-start-button,
#next-button,
#play-again-button,
#howToPlayModal button{
    border: 4px solid transparent;
    text-align: center;
    font-size: 18px;
    background-color: var(--quarternary-color);
    font-weight: 600;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    transform: perspective(100px) translateZ(0);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
}

i {
    margin-right: 8px;
}

#start-screen-container button:hover,
#parameter-start-button:hover,
#next-button:hover,
#play-again-button:hover,
#howToPlayModal button:hover {
    transform: perspective(100px) scale(1.003) translateZ(1px); 
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
}

/* Start Screen */

h1 {
    font-weight: bold;
}

#start-screen-container button {
    padding: 10px 20px;
}

#howToPlayModal .modal-body {
    background-color: var(--tertiary-color);
}

/* Quiz Parameters Screen */

#quiz-parameters-container h2 {
    font-weight: bold;
}

#quiz-parameters-container select {
    margin-bottom: 15px;
    border: none;
    font-size: 20px;
    background-color: var(--color);
    font-weight: 500;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
    height: 50px;
}

#quiz-parameters-container select:focus {
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
}

#parameter-start-button {
    width: 120px;
    display: block;
    margin: 0 auto;
}

/* Quiz Question Screen */

.section h4 {
    font-size: 16px;
    font-weight: bold;
}

#timer-container {
    border: 2px solid var(--secondary-color);
    width: 80%;
    height: 20px;
    border-radius: 25px;
    overflow: hidden;
}

#timer {
    height: 100%;
    width: 100%;
    background-color: var(--secondary-color);
    transition: width linear;
}

#button-container {
    display: flex;
    flex-direction: column; 
    gap: 10px; 
}

#button-container .btn {
    border-radius: 5px;
    border: none;
    font-size: 20px;
    line-height: 25px;
    background-color: var(--color);
    font-weight: 500;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    transform: perspective(100px) translateZ(0);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
    height: 50px;
}

#button-container .btn:hover {
    transform: perspective(100px) scale(1.003) translateZ(1px); 
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
}

#button-container .btn:disabled {
    opacity: 1;
}

#next-button {
    width: 100px;
}

/* Results Screen */

#play-again-button {
    width: 200px;
}

#results-container h2 {
    font-weight: 600;
}

div #logo {
    font-weight: bold;
}

